# AutoFAQ

./: Cancer_faq.md  Copenhagen Interpretation of Quantum Mechanics_faq.md  Cusanus, Nicolaus [Nicolas of Cusa]_faq.md  Evolutionary Epistemology_faq.md  Infinite Regress Arguments_faq.md  Jean-Baptiste Du Bos_faq.md  Kurt Gödel_faq.md  Logicism and Neologicism_faq.md  Medieval Theories of Causation_faq.md  Paul of Venice_faq.md  Philosophy of Biomedicine_faq.md  README.md  The Epistemology of Religion_faq.md  datasets_636198_1224190_create-summaries-csv-per-paragraph.ipynb  datasets_636198_1224190_get-data-for-title.ipynb  make_md_docs.py  make_rated_md_docs.py  pyproject.toml  requirements.txt
data/: filtered.csv  filtered_and_rated_questions.csv
latexs/: Cancer_faq.tex  Copenhagen Interpretation of Quantum Mechanics_faq.tex  Cusanus, Nicolaus [Nicolas of Cusa]_faq.tex  Evolutionary Epistemology_faq.tex  Infinite Regress Arguments_faq.tex  Jean-Baptiste Du Bos_faq.tex  Kurt Gödel_faq.tex  Logicism and Neologicism_faq.tex  Medieval Theories of Causation_faq.tex  Paul of Venice_faq.tex  Philosophy of Biomedicine_faq.tex  The Epistemology of Religion_faq.tex
markdowns/: Cancer_faq.md  Copenhagen Interpretation of Quantum Mechanics_faq.md  Infinite Regress Arguments_faq.md  Kurt Gödel_faq.md  Logicism and Neologicism_faq.md  Medieval Theories of Causation_faq.md
notebooks/: datasets_636198_1224190_1-make-data-csv.ipynb  datasets_636198_1224190_2-explode-nested-data.ipynb
