[tool.poetry]
name = "autofaq"
version = "0.1.0"
description = "To generate frequently asked questions from sizable text"
authors = ["Michael Fekadu <mike.fekadu@gmail.com>", "Nagasai Chandra <nagasaichandra@gmail.com>", "Teja Kalvakolanu <tejakalvakolanu98@gmail.com>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.6.8"
pandas = "^1.0.4"
pandoc = "^1.0.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
